force-app/main/default/objects/JobApplication__c/JobApplication__c.object-meta.xml
<CustomObject>
    <label>Job Application</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>