force-app/main/default/objects/JobApplication__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <formula>Position__r.Hiring_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Manager</label>
    <type>Text</type>
</CustomField>