force-app/main/default/objects/JobApplication__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Application</relationshipLabel>
    <relationshipName>Job_Application</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>