force-app/main/default/objects/JobApplication__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Candidate Validation</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Final Interview</fullName>
                <isActive>false</isActive>
                <label>Final Interview</label>
            </value>
            <value>
                <fullName>In process</fullName>
                <isActive>false</isActive>
                <label>In process</label>
            </value>
            <value>
                <fullName>Interviewed</fullName>
                <isActive>false</isActive>
                <label>Interviewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>