force-app/main/default/objects/JobApplication__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <label>Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Interview - HR</fullName>
            </value>
            <value>
                <fullName>2nd Interview - Hiring Manager</fullName>
            </value>
            <value>
                <fullName>3rd Interview - Management</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Offer accepted</fullName>
            </value>
            <value>
                <fullName>Offer rejected</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Process closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>